<resources>
    <string name="app_name">CustomViewEmail</string>
    <string name="gmail">Gmail</string>
    <string name="all_inboxes">All inboxes</string>
    <string name="primary">Primary</string>
    <string name="promotions">Promotions</string>
    <string name="social">Social</string>
    <string name="all_labels">All labels</string>
    <string name="starred">Starred</string>
    <string name="snoozed">Snoozed</string>
    <string name="important">Important</string>
    <string name="sent">Sent</string>
    <string name="scheduled">Scheduled</string>
    <string name="outbox">Outbox</string>
    <string name="drafts">Drafts</string>
    <string name="all_mail">All Mail</string>
    <string name="spam">Spam</string>
    <string name="bin">Bin</string>
    <string name="calendar">Calendar</string>
    <string name="google_apps">Google apps</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="search_in_emails">Search in emails</string>
    <string name="compose">Compose</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>